--- a/index.html
+++ b/index.html
@@ -10,134 +10,129 @@
 
   <!-- Header / Hero Section -->
   <header>
-    <div>
-      <!-- Ask Copilot to teach you about `.svg` 🙂 -->
-      <img src="img/intel-header-logo.svg" alt="Intel Logo" />
+    <div class="header-content">
+      <!-- Intel logo (replace with your own image if needed) -->
+      <img src="eco-friendly-intel-logo.png" alt="Intel Logo" class="intel-logo" />
       <!-- Main Heading -->
-      <h1>
-        Sustainability Through the Ages
-      </h1>
-
-      <!-- Subheading / Description -->
-      <p>
-        Explore Intel's journey through time, discovering how our commitment
-        to innovation has shaped a more sustainable future for technology 
-        and our planet.
+      <h1>Sustainability Through the Ages</h1>
+      <!-- Subheading -->
+      <p class="subheading">
+        Discover Intel's journey to a more sustainable future, from early innovation to today's climate action and green manufacturing.
       </p>
     </div>
   </header>
 
   <!-- Timeline Cards Section -->
-  <section>
-
-    <!-- Card 1: 1968 -->
-    <div>
-      <h2>1968</h2>
-      <h3>Intel Founded</h3>
-      <img src="img/1.jpg" alt="Placeholder Image" />
+  <section class="timeline-container">
+    <!-- Each event is a timeline-card -->
+    <div class="timeline-card">
+      <h2>1995</h2>
+      <h3>First Environmental Report</h3>
+      <!-- Timeline image -->
+      <img src="https://placehold.co/250x100/0068b5/fff?text=1995" alt="Green Leaf" />
       <p>
-        Robert Noyce and Gordon Moore rename the newly formed company 
-        NM Electronics to Intel Corporation, laying the foundation for 
-        decades of technological innovation.
+        Intel publishes its first environmental, health, and safety report.
       </p>
+      <!-- More details shown on hover (can be styled with CSS) -->
+      <div class="card-details">
+        <p>
+          This milestone marked the beginning of Intel's public commitment to transparency and environmental responsibility.
+        </p>
+      </div>
     </div>
-
-    <!-- Card 2: 1971 -->
-    <div>
-      <h2>1971</h2>
-      <h3>First Microprocessor</h3>
-      <img src="img/2.jpg" alt="Placeholder Image" />
+    <div class="timeline-card">
+      <h2>2008</h2>
+      <h3>Green Power Leadership Award</h3>
+      <img src="https://placehold.co/250x100/00b67a/fff?text=2008" alt="Award" />
       <p>
-        Intel debuts the 4004, the world's first commercial microprocessor, 
-        igniting the microprocessor revolution and propelling the future 
-        of computing devices.
+        Intel is recognized as the largest voluntary purchaser of green power in the U.S.
       </p>
+      <div class="card-details">
+        <p>
+          Intel won the EPA Green Power Leadership Award, highlighting its leadership in renewable energy use.
+        </p>
+      </div>
     </div>
-
-    <!-- Card 3: 1978 -->
-    <div>
-      <h2>1978</h2>
-      <h3>8086 Processor</h3>
-      <img src="img/3.jpg" alt="Placeholder Image" />
+    <div class="timeline-card">
+      <h2>2012</h2>
+      <h3>Water Conservation</h3>
+      <img src="https://placehold.co/250x100/0071c5/fff?text=2012" alt="Water Conservation" />
       <p>
-        Launch of the 8086 processor, establishing the x86 architecture 
-        that drives countless PCs and servers in the modern era.
+        Intel begins large-scale water conservation projects.
       </p>
+      <div class="card-details">
+        <p>
+          These projects save billions of gallons of water each year, supporting Intel's sustainability goals.
+        </p>
+      </div>
     </div>
-
-    <!-- Card 4: 1985 -->
-    <div>
-      <h2>1985</h2>
-      <h3>386 Processor</h3>
-      <img src="img/4.jpg" alt="Placeholder Image" />
-      <p>
-        Intel introduces the 386 processor with 32-bit architecture, 
-        ushering in a new era of performance and multitasking for 
-        personal computers.
-      </p>
-    </div>
-
-    <!-- Card 5: 2006 -->
-    <div>
-      <h2>2006</h2>
-      <h3>Peak GHG Emissions</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
-      <p>
-        This year marks Intel's highest annual greenhouse gas emissions 
-        for operations. Over subsequent years, Intel invests heavily in 
-        chemical abatement, renewable energy, and energy-efficient 
-        manufacturing to reverse this trend.
-      </p>
-    </div>
-
-    <!-- Card 6: 2020 -->
-    <div>
+    <div class="timeline-card">
       <h2>2020</h2>
       <h3>RISE Strategy</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
+      <img src="https://placehold.co/250x100/00b67a/fff?text=2020" alt="RISE Strategy" />
       <p>
-        Intel launches its RISE (Responsible, Inclusive, Sustainable, 
-        Enabling) strategy and 2030 goals, aiming to drive industry-wide 
-        progress on climate action, water stewardship, and waste reduction.
+        Intel launches the RISE strategy.
       </p>
+      <div class="card-details">
+        <p>
+          RISE stands for Responsibility, Inclusion, Sustainability, and Enabling technology for good.
+        </p>
+      </div>
     </div>
-
-    <!-- Card 7: 2022 -->
-    <div>
+    <div class="timeline-card">
+      <h2>2021</h2>
+      <h3>100% Green Power in U.S., Europe, Israel</h3>
+      <img src="https://placehold.co/250x100/0068b5/fff?text=2021" alt="Solar Panels" />
+      <p>
+        Intel achieves 100% renewable electricity use in key regions.
+      </p>
+      <div class="card-details">
+        <p>
+          This achievement covers Intel's operations in the U.S., Europe, and Israel, reducing its carbon footprint.
+        </p>
+      </div>
+    </div>
+    <div class="timeline-card">
       <h2>2022</h2>
-      <h3>Net-Zero By 2040</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
+      <h3>Net-Zero by 2040 Commitment</h3>
+      <img src="https://placehold.co/250x100/00b67a/fff?text=2022" alt="Net Zero" />
       <p>
-        Intel announces its commitment to achieve net-zero greenhouse 
-        gas emissions (Scope 1 and 2) across its global operations 
-        by 2040, building on years of environmental initiatives.
+        Intel commits to net-zero greenhouse gas emissions by 2040.
       </p>
+      <div class="card-details">
+        <p>
+          Intel aims to reach net-zero emissions across its global operations, building on years of environmental progress.
+        </p>
+      </div>
     </div>
-
-    <!-- Card 8: 2023 -->
-    <div>
+    <div class="timeline-card">
       <h2>2023</h2>
-      <h3>Renewable Electricity</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
+      <h3>Water Restoration</h3>
+      <img src="https://placehold.co/250x100/0071c5/fff?text=2023" alt="Water Restoration" />
       <p>
-        The company achieves 99% renewable electricity usage worldwide, 
-        helping to drastically lower carbon emissions and driving progress 
-        toward Intel's long-term sustainability goals.
+        Intel restores 100% of its global freshwater use.
       </p>
+      <div class="card-details">
+        <p>
+          Billions of gallons are returned to local watersheds, supporting communities and ecosystems.
+        </p>
+      </div>
     </div>
-
-    <!-- Card 9: 2024 -->
-    <div>
+    <div class="timeline-card">
       <h2>2024</h2>
       <h3>Sustainability Summit</h3>
-      <img src="https://placehold.co/250x100" alt="Placeholder Image" />
+      <img src="https://placehold.co/250x100/0068b5/fff?text=2024" alt="Sustainability Summit" />
       <p>
-        Intel hosts its first Sustainability Summit, uniting suppliers, 
-        government officials, and industry leaders to collaborate on 
-        next-generation sustainable semiconductor manufacturing.
+        Intel hosts its first Sustainability Summit.
       </p>
+      <div class="card-details">
+        <p>
+          The summit brings together leaders to advance green semiconductor manufacturing and share best practices.
+        </p>
+      </div>
     </div>
   </section>
-  <p>Scroll to view timeline | Hover over cards to learn more!</p>
+  <!-- Timeline instructions for users -->
+  <p style="text-align:center;">Scroll sideways to view the timeline! Hover over a card for more info.</p>
 </body>
 </html>
